Tried to add google places library access.  Still needs work.  Not finding namespace google in event-form component.

--- a/TasteBuddiesClient/src/index.html
+++ b/TasteBuddiesClient/src/index.html
@@ -10,6 +10,10 @@
 </head>
 <body class="d-flex flex-column h-100">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+  <script
+  async
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGcG_59MFm47wEqSBnxeFIh_xtO3FKP1A&libraries=places">
+  </script>
   <app-root class="d-flex flex-column h-100"></app-root>
 
 
